chore: remove eggdog and galint

--- a/site/index.html
+++ b/site/index.html
@@ -21,142 +21,6 @@
 
 <div
   class="card"
-  data-start-time="1724961600"
-  data-end-time="1725260340"
->
-  <img
-    src="assets/cards/eggdogInvitational.webp"
-    alt="Eggdog Invitational banner image"
-    class="image"
-  />
-  <div class="card-content">
-    <h2>Eggdog Invitational</h2>
-    <h4>August 29 - September 01</h4>
-    <div class="featured-players">
-      <u>Featured Players</u>
-      <ul class="featured-players-columns">
-        <li>Cody Schwab</li>
-        <li>moky</li>
-        <li>Hungrybox</li>
-        <li>Wizzrobe</li>
-        <li>Zain</li>
-        <li>aMSa</li>
-        <li>Mang0</li>
-        <li>Aklo</li>
-      </ul>
-    </div>
-    <hr />
-    <p>
-      <a
-        class="card-location"
-        href="https://www.google.com/maps/search/?api=1&query=Vancouver%2C%20BC%2C%20Canada"
-        target="_blank"
-        data-umami-event="map-link-clicked"
-        data-umami-event-location="Vancouver, BC"
-      >
-        Vancouver, BC </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 16
-    </p>
-    <hr />
-    <div class="buttons">
-      <a
-        href="https://www.start.gg/tournament/eggdog-invitational/event/melee-singles"
-        target="_blank"
-        class="card-button"
-        data-umami-event="start-gg-clicked"
-        data-umami-event-name="Eggdog Invitational"
-        >Start.gg</a
-      >
-      <a
-        href=""
-        target="_blank"
-        class="card-button hidden"
-        data-umami-event="schedule-clicked"
-        data-umami-event-name="Eggdog Invitational"
-        >Schedule</a
-      >
-      <a
-        href=""
-        target="_blank"
-        class="card-button hidden"
-        data-umami-event="stream-clicked"
-        data-umami-event-name="Eggdog Invitational"
-        >Stream</a
-      >
-    </div>
-  </div>
-</div>
-
-<div
-  class="card"
-  data-start-time="1725087600"
-  data-end-time="1725249600"
->
-  <img
-    src="assets/cards/galintMeleeOpen2024.webp"
-    alt="Galint Melee Open 2024 banner image"
-    class="image"
-  />
-  <div class="card-content">
-    <h2>Galint Melee Open 2024</h2>
-    <h4>August 31 - September 01</h4>
-    <div class="featured-players">
-      <u>Featured Players</u>
-      <ul class="featured-players-columns">
-        <li>KoDoRiN</li>
-        <li>Soonsay</li>
-        <li>Skerzo</li>
-        <li>Zeo</li>
-        <li>S2J</li>
-        <li>Junebug</li>
-        <li>Stiv</li>
-        <li>TBD</li>
-      </ul>
-    </div>
-    <hr />
-    <p>
-      <a
-        class="card-location"
-        href="https://www.google.com/maps/search/?api=1&query=4211%20No.%203%20Rd%2C%20Richmond%2C%20BC%20V6X%202C3%2C%20Canada"
-        target="_blank"
-        data-umami-event="map-link-clicked"
-        data-umami-event-location="Richmond, BC"
-      >
-        Richmond, BC </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 52
-    </p>
-    <hr />
-    <div class="buttons">
-      <a
-        href="https://www.start.gg/tournament/galint-melee-open-2024/event/melee-singles"
-        target="_blank"
-        class="card-button"
-        data-umami-event="start-gg-clicked"
-        data-umami-event-name="Galint Melee Open 2024"
-        >Start.gg</a
-      >
-      <a
-        href=""
-        target="_blank"
-        class="card-button hidden"
-        data-umami-event="schedule-clicked"
-        data-umami-event-name="Galint Melee Open 2024"
-        >Schedule</a
-      >
-      <a
-        href=""
-        target="_blank"
-        class="card-button hidden"
-        data-umami-event="stream-clicked"
-        data-umami-event-name="Galint Melee Open 2024"
-        >Stream</a
-      >
-    </div>
-  </div>
-</div>
-
-<div
-  class="card"
   data-start-time="1725627600"
   data-end-time="1725854340"
 >
@@ -174,11 +38,11 @@
         <li>Cody Schwab</li>
         <li>Jmook</li>
         <li>Plup</li>
-        <li>Wizzrobe</li>
+        <li>Mang0</li>
         <li>Zain</li>
         <li>moky</li>
         <li>Hungrybox</li>
-        <li>Aklo</li>
+        <li>Wizzrobe</li>
       </ul>
     </div>
     <hr />
@@ -191,7 +55,7 @@
         data-umami-event-location="Sandusky, OH"
       >
         Sandusky, OH </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 531
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 601
     </p>
     <hr />
     <div class="buttons">
@@ -239,14 +103,14 @@
     <div class="featured-players">
       <u>Featured Players</u>
       <ul class="featured-players-columns">
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
+        <li>Zain</li>
+        <li>moky</li>
+        <li>Mang0</li>
+        <li>Salt</li>
+        <li>Jmook</li>
+        <li>Hungrybox</li>
+        <li>Aklo</li>
+        <li>Joshman</li>
       </ul>
     </div>
     <hr />
@@ -259,7 +123,7 @@
         data-umami-event-location="Westford, MA"
       >
         Westford, MA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 216
     </p>
     <hr />
     <div class="buttons">
@@ -327,7 +191,7 @@
         data-umami-event-location="Surrey, BC"
       >
         Surrey, BC </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 30
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 49
     </p>
     <hr />
     <div class="buttons">
@@ -444,13 +308,13 @@
       <u>Featured Players</u>
       <ul class="featured-players-columns">
         <li>Cody Schwab</li>
-        <li>Plup</li>
-        <li>Wizzrobe</li>
-        <li>Zamu</li>
         <li>Jmook</li>
+        <li>Plup</li>
         <li>aMSa</li>
-        <li>Salt</li>
-        <li>Soonsay</li>
+        <li>Zain</li>
+        <li>moky</li>
+        <li>Leffen</li>
+        <li>Hungrybox</li>
       </ul>
     </div>
     <hr />
@@ -463,7 +327,7 @@
         data-umami-event-location="Seattle, WA"
       >
         Seattle, WA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 505
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 771
     </p>
     <hr />
     <div class="buttons">
