refactor: switch from mailerlite to sender.net

--- a/ssg/src/html/email.html
+++ b/ssg/src/html/email.html
@@ -37,6 +37,8 @@
 <body>
     <img class="logo" src="https://meleemajors.gg/assets/favicon/favicon.webp" alt="">
     {{content}}
-    <a href="https://meleemajors.gg" class="button" target="blank">meleemajors.gg</a>
+    <a href="https://meleemajors.gg" class="button"
+    target="blank">meleemajors.gg</a>
+    <a href="{$unsubscribe_link}">{$unsubscribe_text}</a>
 </body>
 </html>
