feat: schedule top 8 email and style logs

--- a/site/index.html
+++ b/site/index.html
@@ -55,7 +55,7 @@
         data-umami-event-location="Westford, MA"
       >
         Westford, MA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 256
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 330
     </p>
     <hr />
     <div class="buttons">
@@ -68,9 +68,9 @@
         >Start.gg</a
       >
       <a
-        href=""
+        href="https://i.postimg.cc/15YZbvPs/20240922-125049.jpg"
         target="_blank"
-        class="card-button hidden"
+        class="card-button"
         data-umami-event="schedule-clicked"
         data-umami-event-name="Wavelength 2024"
         >Schedule</a
@@ -105,10 +105,10 @@
       <ul class="featured-players-columns">
         <li>Zain</li>
         <li>Aklo</li>
-        <li>TBD</li>
+        <li>Junebug</li>
         <li>TBD</li>
         <li>moky</li>
-        <li>Junebug</li>
+        <li>Fiction</li>
         <li>TBD</li>
         <li>TBD</li>
       </ul>
@@ -123,7 +123,7 @@
         data-umami-event-location="Surrey, BC"
       >
         Surrey, BC </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 55
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 68
     </p>
     <hr />
     <div class="buttons">
@@ -259,7 +259,7 @@
         data-umami-event-location="Seattle, WA"
       >
         Seattle, WA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 771
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 890
     </p>
     <hr />
     <div class="buttons">
