--- a/ssg/src/html/footer.html
+++ b/ssg/src/html/footer.html
@@ -2,11 +2,49 @@
   </div>
   <footer>
     <div class="footer">
-      <!-- Email note -->
+      <!-- Email signup form -->
       <div class="email-note email-note-hidden">
         <p>want emails about upcoming melee majors? add your email below</p>
-        <input type="email" name="EMAIL" placeholder="your@email.com" id="mce-EMAIL" spellcheck="false">
-        <button onclick="emailSignup(event)">Subscribe</button>
+        <script src="https://f.convertkit.com/ckjs/ck.5.js"></script>
+        <form
+            action="https://app.kit.com/forms/7193786/subscriptions"
+            class="seva-form formkit-form"
+            method="post"
+            data-sv-form="7193786"
+            data-uid="bc1d243891"
+            data-format="inline"
+            data-version="5"
+            data-options="{&quot;settings&quot;:{&quot;after_subscribe&quot;:{&quot;action&quot;:&quot;message&quot;,&quot;success_message&quot;:&quot;Success! Now check your email to confirm your subscription.&quot;,&quot;redirect_url&quot;:&quot;&quot;},&quot;analytics&quot;:{&quot;google&quot;:null,&quot;fathom&quot;:null,&quot;facebook&quot;:null,&quot;segment&quot;:null,&quot;pinterest&quot;:null,&quot;sparkloop&quot;:null,&quot;googletagmanager&quot;:null},&quot;modal&quot;:{&quot;trigger&quot;:&quot;timer&quot;,&quot;scroll_percentage&quot;:null,&quot;timer&quot;:5,&quot;devices&quot;:&quot;all&quot;,&quot;show_once_every&quot;:15},&quot;powered_by&quot;:{&quot;show&quot;:true,&quot;url&quot;:&quot;https://kit.com/features/forms?utm_campaign=poweredby&amp;utm_content=form&amp;utm_medium=referral&amp;utm_source=dynamic&quot;},&quot;recaptcha&quot;:{&quot;enabled&quot;:false},&quot;return_visitor&quot;:{&quot;action&quot;:&quot;show&quot;,&quot;custom_content&quot;:&quot;&quot;},&quot;slide_in&quot;:{&quot;display_in&quot;:&quot;bottom_right&quot;,&quot;trigger&quot;:&quot;timer&quot;,&quot;scroll_percentage&quot;:null,&quot;timer&quot;:5,&quot;devices&quot;:&quot;all&quot;,&quot;show_once_every&quot;:15},&quot;sticky_bar&quot;:{&quot;display_in&quot;:&quot;top&quot;,&quot;trigger&quot;:&quot;timer&quot;,&quot;scroll_percentage&quot;:null,&quot;timer&quot;:5,&quot;devices&quot;:&quot;all&quot;,&quot;show_once_every&quot;:15}},&quot;version&quot;:&quot;5&quot;}"
+            min-width="400 500 600 700 800"
+        >
+            <div data-style="clean">
+                <ul class="formkit-alert formkit-alert-error" data-element="errors" data-group="alert"></ul>
+                <div data-element="fields" data-stacked="false" class="seva-fields formkit-fields">
+                    <div class="formkit-field">
+                        <input
+                            class="formkit-input"
+                            name="email_address"
+                            aria-label="Email Address"
+                            placeholder="Email Address"
+                            required=""
+                            type="email"
+                            data-1p-ignore
+                        >
+                    </div>
+                    <button data-element="submit" class="formkit-submit formkit-submit">
+                        <div class="formkit-spinner">
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                        </div><span class="">Subscribe</span>
+                    </button>
+                </div>
+            </div>
+        </form>
+
+        <!-- Old version: -->
+        <!-- <input type="email" name="EMAIL" placeholder="your@email.com" id="mce-EMAIL" spellcheck="false">
+        <button onclick="emailSignup(event)">Subscribe</button> -->
       </div>
 
       <!-- Calendar note -->
