--- a/site/index.html
+++ b/site/index.html
@@ -103,12 +103,12 @@
     <div class="featured-players">
       <u>Featured Players</u>
       <ul class="featured-players-columns">
-        <li>Zain</li>
-        <li>Aklo</li>
-        <li>Junebug</li>
-        <li>TBD</li>
         <li>moky</li>
+        <li>MOF</li>
+        <li>TBD</li>
+        <li>TBD</li>
         <li>Fiction</li>
+        <li>TBD</li>
         <li>TBD</li>
         <li>TBD</li>
       </ul>
@@ -123,7 +123,7 @@
         data-umami-event-location="Surrey, BC"
       >
         Surrey, BC </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 69
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 85
     </p>
     <hr />
     <div class="buttons">
@@ -136,17 +136,17 @@
         >Start.gg</a
       >
       <a
-        href=""
+        href="https://images.start.gg/images/profileWidgetPageLayout/2672668/image-a6a8f573952112780a147eb836930bda-optimized.png"
         target="_blank"
-        class="card-button hidden"
+        class="card-button"
         data-umami-event="schedule-clicked"
         data-umami-event-name="Pataka Esports Festival"
         >Schedule</a
       >
       <a
-        href=""
+        href="https://www.twitch.tv/galintgaming"
         target="_blank"
-        class="card-button hidden"
+        class="card-button"
         data-umami-event="stream-clicked"
         data-umami-event-name="Pataka Esports Festival"
         >Stream</a
@@ -259,7 +259,7 @@
         data-umami-event-location="Seattle, WA"
       >
         Seattle, WA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 890
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 891
     </p>
     <hr />
     <div class="buttons">
