chore: update tournaments.json

--- a/site/index.html
+++ b/site/index.html
@@ -21,134 +21,66 @@
 
 <div
   class="card"
-  data-start-time="1728129600"
-  data-end-time="1728273540"
+  data-start-time="1729954800"
+  data-end-time="1730001540"
 >
   <img
-    src="assets/cards/wavelength2024.webp"
-    alt="Wavelength 2024 banner image"
+    src="assets/cards/theFunction4Brooklan.webp"
+    alt="The Function 4 @ BrookLAN banner image"
     class="image"
   />
   <div class="card-content">
-    <h2>Wavelength 2024</h2>
-    <h4>October 05 - October 06</h4>
+    <h2>The Function 4 @ BrookLAN</h2>
+    <h4>October 26 - October 26</h4>
     <div class="featured-players">
       <u>Featured Players</u>
       <ul class="featured-players-columns">
         <li>Zain</li>
-        <li>moky</li>
-        <li>Mang0</li>
-        <li>Salt</li>
-        <li>Jmook</li>
-        <li>Hungrybox</li>
+        <li>KoDoRiN</li>
+        <li>Chem</li>
+        <li>SDJ</li>
         <li>Aklo</li>
         <li>Joshman</li>
+        <li>SFOP</li>
+        <li>Junebug</li>
       </ul>
     </div>
     <hr />
     <p>
       <a
         class="card-location"
-        href="https://www.google.com/maps/search/?api=1&query=219%20Littleton%20Rd%2C%20Westford%2C%20MA%2001886%2C%20USA"
+        href="https://www.google.com/maps/search/?api=1&query=339%20Troutman%20St%2C%20Brooklyn%2C%20NY%2011237%2C%20USA"
         target="_blank"
         data-umami-event="map-link-clicked"
-        data-umami-event-location="Westford, MA"
+        data-umami-event-location="Brooklyn, NY"
       >
-        Westford, MA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 330
+        Brooklyn, NY </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 259
     </p>
     <hr />
     <div class="buttons">
       <a
-        href="https://www.start.gg/tournament/wavelength-2024/event/melee-singles"
+        href="https://www.start.gg/tournament/the-function-4-brooklan/event/melee-singles"
         target="_blank"
         class="card-button"
         data-umami-event="start-gg-clicked"
-        data-umami-event-name="Wavelength 2024"
+        data-umami-event-name="The Function 4 @ BrookLAN"
         >Start.gg</a
       >
       <a
-        href="https://i.postimg.cc/15YZbvPs/20240922-125049.jpg"
+        href="assets/schedules/theFunction4Schedule.png"
         target="_blank"
         class="card-button"
         data-umami-event="schedule-clicked"
-        data-umami-event-name="Wavelength 2024"
+        data-umami-event-name="The Function 4 @ BrookLAN"
         >Schedule</a
       >
       <a
-        href=""
-        target="_blank"
-        class="card-button hidden"
-        data-umami-event="stream-clicked"
-        data-umami-event-name="Wavelength 2024"
-        >Stream</a
-      >
-    </div>
-  </div>
-</div>
-
-<div
-  class="card"
-  data-start-time="1729357200"
-  data-end-time="1729486800"
->
-  <img
-    src="assets/cards/patakaEsportsFestival.webp"
-    alt="Pataka Esports Festival banner image"
-    class="image"
-  />
-  <div class="card-content">
-    <h2>Pataka Esports Festival</h2>
-    <h4>October 19 - October 20</h4>
-    <div class="featured-players">
-      <u>Featured Players</u>
-      <ul class="featured-players-columns">
-        <li>moky</li>
-        <li>MOF</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>Fiction</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-      </ul>
-    </div>
-    <hr />
-    <p>
-      <a
-        class="card-location"
-        href="https://www.google.com/maps/search/?api=1&query=12025%20Nordel%20Way%20Unit%20201%2C%20Surrey%2C%20BC%20V3W%201W1%2C%20Canada"
-        target="_blank"
-        data-umami-event="map-link-clicked"
-        data-umami-event-location="Surrey, BC"
-      >
-        Surrey, BC </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 85
-    </p>
-    <hr />
-    <div class="buttons">
-      <a
-        href="https://www.start.gg/tournament/pataka-esports-festival/event/melee-singles"
-        target="_blank"
-        class="card-button"
-        data-umami-event="start-gg-clicked"
-        data-umami-event-name="Pataka Esports Festival"
-        >Start.gg</a
-      >
-      <a
-        href="https://images.start.gg/images/profileWidgetPageLayout/2672668/image-a6a8f573952112780a147eb836930bda-optimized.png"
-        target="_blank"
-        class="card-button"
-        data-umami-event="schedule-clicked"
-        data-umami-event-name="Pataka Esports Festival"
-        >Schedule</a
-      >
-      <a
-        href="https://www.twitch.tv/galintgaming"
+        href="https://twitch.tv/nycmelee"
         target="_blank"
         class="card-button"
         data-umami-event="stream-clicked"
-        data-umami-event-name="Pataka Esports Festival"
+        data-umami-event-name="The Function 4 @ BrookLAN"
         >Stream</a
       >
     </div>
@@ -171,14 +103,14 @@
     <div class="featured-players">
       <u>Featured Players</u>
       <ul class="featured-players-columns">
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
+        <li>Zain</li>
+        <li>Hungrybox</li>
+        <li>Wizzrobe</li>
+        <li>Salt</li>
+        <li>Jmook</li>
+        <li>Mang0</li>
+        <li>Aklo</li>
+        <li>Joshman</li>
       </ul>
     </div>
     <hr />
@@ -191,7 +123,7 @@
         data-umami-event-location="Sunny Isles Beach, FL"
       >
         Sunny Isles Beach, FL </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 168
     </p>
     <hr />
     <div class="buttons">
@@ -217,6 +149,142 @@
         class="card-button hidden"
         data-umami-event="stream-clicked"
         data-umami-event-name="Luminosity Makes Moves Miami 2024"
+        >Stream</a
+      >
+    </div>
+  </div>
+</div>
+
+<div
+  class="card"
+  data-start-time="1733587200"
+  data-end-time="1733720340"
+>
+  <img
+    src="assets/cards/nounsvitational2024.webp"
+    alt="Nounsvitational 2024 banner image"
+    class="image"
+  />
+  <div class="card-content">
+    <h2>Nounsvitational 2024</h2>
+    <h4>December 07 - December 08</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>Cody Schwab</li>
+        <li>Jmook</li>
+        <li>Plup</li>
+        <li>Mang0</li>
+        <li>Zain</li>
+        <li>moky</li>
+        <li>aMSa</li>
+        <li>Soonsay</li>
+      </ul>
+    </div>
+    <hr />
+    <p>
+      <a
+        class="card-location"
+        href="https://www.google.com/maps/search/?api=1&query=339%20Troutman%20St%2C%20Brooklyn%2C%20NY%2011237%2C%20USA"
+        target="_blank"
+        data-umami-event="map-link-clicked"
+        data-umami-event-location="Brooklyn, NY"
+      >
+        Brooklyn, NY </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 8
+    </p>
+    <hr />
+    <div class="buttons">
+      <a
+        href="https://www.start.gg/tournament/nounsvitational-2024/event/melee-singles"
+        target="_blank"
+        class="card-button"
+        data-umami-event="start-gg-clicked"
+        data-umami-event-name="Nounsvitational 2024"
+        >Start.gg</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="schedule-clicked"
+        data-umami-event-name="Nounsvitational 2024"
+        >Schedule</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="stream-clicked"
+        data-umami-event-name="Nounsvitational 2024"
+        >Stream</a
+      >
+    </div>
+  </div>
+</div>
+
+<div
+  class="card"
+  data-start-time="1734102000"
+  data-end-time="1734318000"
+>
+  <img
+    src="assets/cards/platfightGamingChampionships.webp"
+    alt="Platfight Gaming Championships banner image"
+    class="image"
+  />
+  <div class="card-content">
+    <h2>Platfight Gaming Championships</h2>
+    <h4>December 13 - December 15</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+      </ul>
+    </div>
+    <hr />
+    <p>
+      <a
+        class="card-location"
+        href="https://www.google.com/maps/search/?api=1&query=3011%20Maingate%20Ln%2C%20Kissimmee%2C%20FL%2034747%2C%20USA"
+        target="_blank"
+        data-umami-event="map-link-clicked"
+        data-umami-event-location="Kissimmee, FL"
+      >
+        Kissimmee, FL </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
+    </p>
+    <hr />
+    <div class="buttons">
+      <a
+        href="https://www.start.gg/tournament/platfight-gaming-championships/event/melee-singles"
+        target="_blank"
+        class="card-button"
+        data-umami-event="start-gg-clicked"
+        data-umami-event-name="Platfight Gaming Championships"
+        >Start.gg</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="schedule-clicked"
+        data-umami-event-name="Platfight Gaming Championships"
+        >Schedule</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="stream-clicked"
+        data-umami-event-name="Platfight Gaming Championships"
         >Stream</a
       >
     </div>
@@ -259,7 +327,7 @@
         data-umami-event-location="Seattle, WA"
       >
         Seattle, WA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 891
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 892
     </p>
     <hr />
     <div class="buttons">
@@ -285,6 +353,74 @@
         class="card-button hidden"
         data-umami-event="stream-clicked"
         data-umami-event-name="Don't Park on the Grass 2024"
+        >Stream</a
+      >
+    </div>
+  </div>
+</div>
+
+<div
+  class="card"
+  data-start-time="1739556000"
+  data-end-time="1739772000"
+>
+  <img
+    src="assets/cards/genesisX2.webp"
+    alt="Genesis X2 banner image"
+    class="image"
+  />
+  <div class="card-content">
+    <h2>Genesis X2</h2>
+    <h4>February 14 - February 16</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>Magi</li>
+        <li>Fiction</li>
+        <li>Stiv</li>
+        <li>Umarth</li>
+        <li>Axe</li>
+        <li>CPU0</li>
+        <li>Zeo</li>
+        <li>TBD</li>
+      </ul>
+    </div>
+    <hr />
+    <p>
+      <a
+        class="card-location"
+        href="https://www.google.com/maps/search/?api=1&query=150%20W%20San%20Carlos%20St%2C%20San%20Jose%2C%20CA%2095113%2C%20USA"
+        target="_blank"
+        data-umami-event="map-link-clicked"
+        data-umami-event-location="San Jose, CA"
+      >
+        San Jose, CA </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 318
+    </p>
+    <hr />
+    <div class="buttons">
+      <a
+        href="https://www.start.gg/tournament/genesis-x2/event/melee-singles"
+        target="_blank"
+        class="card-button"
+        data-umami-event="start-gg-clicked"
+        data-umami-event-name="Genesis X2"
+        >Start.gg</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="schedule-clicked"
+        data-umami-event-name="Genesis X2"
+        >Schedule</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="stream-clicked"
+        data-umami-event-name="Genesis X2"
         >Stream</a
       >
     </div>
