chore: add luminosity makes moves info

--- a/site/index.html
+++ b/site/index.html
@@ -68,17 +68,17 @@
         >Start.gg</a
       >
       <a
-        href=""
+        href="https://images.start.gg/images/profileWidgetPageLayout/2825237/image-ba95d4bd3acb6aafbfded76bb0e26cf7-optimized.png"
         target="_blank"
-        class="card-button hidden"
+        class="card-button"
         data-umami-event="schedule-clicked"
         data-umami-event-name="Luminosity Makes Moves Miami 2024"
         >Schedule</a
       >
       <a
-        href=""
+        href="https://www.twitch.tv/luminositygaming"
         target="_blank"
-        class="card-button hidden"
+        class="card-button"
         data-umami-event="stream-clicked"
         data-umami-event-name="Luminosity Makes Moves Miami 2024"
         >Stream</a
@@ -191,7 +191,7 @@
         data-umami-event-location="Brooklyn, NY"
       >
         Brooklyn, NY </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 8
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 9
     </p>
     <hr />
     <div class="buttons">
@@ -310,11 +310,11 @@
         <li>Magi</li>
         <li>Fiction</li>
         <li>Stiv</li>
-        <li>Umarth</li>
+        <li>Zeo</li>
         <li>Axe</li>
         <li>CPU0</li>
-        <li>Zeo</li>
-        <li>TBD</li>
+        <li>Squid</li>
+        <li>Umarth</li>
       </ul>
     </div>
     <hr />
@@ -327,7 +327,7 @@
         data-umami-event-location="San Jose, CA"
       >
         San Jose, CA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 319
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 343
     </p>
     <hr />
     <div class="buttons">
