chore: remove LMMM

--- a/site/index.html
+++ b/site/index.html
@@ -21,74 +21,6 @@
 
 <div
   class="card"
-  data-start-time="1730473200"
-  data-end-time="1730692800"
->
-  <img
-    src="assets/cards/luminosityMakesMovesMiami2024.webp"
-    alt="Luminosity Makes Moves Miami 2024 banner image"
-    class="image"
-  />
-  <div class="card-content">
-    <h2>Luminosity Makes Moves Miami 2024</h2>
-    <h4>November 01 - November 03</h4>
-    <div class="featured-players">
-      <u>Featured Players</u>
-      <ul class="featured-players-columns">
-        <li>Zain</li>
-        <li>Hungrybox</li>
-        <li>Wizzrobe</li>
-        <li>Salt</li>
-        <li>Jmook</li>
-        <li>Mang0</li>
-        <li>Aklo</li>
-        <li>Joshman</li>
-      </ul>
-    </div>
-    <hr />
-    <p>
-      <a
-        class="card-location"
-        href="https://www.google.com/maps/search/?api=1&query=16701%20Collins%20Ave%2C%20Sunny%20Isles%20Beach%2C%20FL%2033160%2C%20USA"
-        target="_blank"
-        data-umami-event="map-link-clicked"
-        data-umami-event-location="Sunny Isles Beach, FL"
-      >
-        Sunny Isles Beach, FL </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 168
-    </p>
-    <hr />
-    <div class="buttons">
-      <a
-        href="https://www.start.gg/tournament/luminosity-makes-moves-miami-2024/event/melee-singles"
-        target="_blank"
-        class="card-button"
-        data-umami-event="start-gg-clicked"
-        data-umami-event-name="Luminosity Makes Moves Miami 2024"
-        >Start.gg</a
-      >
-      <a
-        href="https://images.start.gg/images/profileWidgetPageLayout/2825237/image-ba95d4bd3acb6aafbfded76bb0e26cf7-optimized.png"
-        target="_blank"
-        class="card-button"
-        data-umami-event="schedule-clicked"
-        data-umami-event-name="Luminosity Makes Moves Miami 2024"
-        >Schedule</a
-      >
-      <a
-        href="https://www.twitch.tv/luminositygaming"
-        target="_blank"
-        class="card-button"
-        data-umami-event="stream-clicked"
-        data-umami-event-name="Luminosity Makes Moves Miami 2024"
-        >Stream</a
-      >
-    </div>
-  </div>
-</div>
-
-<div
-  class="card"
   data-start-time="1731772800"
   data-end-time="1731913200"
 >
@@ -123,7 +55,7 @@
         data-umami-event-location="Seattle, WA"
       >
         Seattle, WA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 892
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 888
     </p>
     <hr />
     <div class="buttons">
@@ -178,7 +110,7 @@
         <li>Zain</li>
         <li>moky</li>
         <li>aMSa</li>
-        <li>Soonsay</li>
+        <li>Aklo</li>
       </ul>
     </div>
     <hr />
@@ -191,7 +123,7 @@
         data-umami-event-location="Brooklyn, NY"
       >
         Brooklyn, NY </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 9
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 13
     </p>
     <hr />
     <div class="buttons">
@@ -293,6 +225,74 @@
 
 <div
   class="card"
+  data-start-time="1738422000"
+  data-end-time="1738555200"
+>
+  <img
+    src="assets/cards/tangoADoublesMajor.webp"
+    alt="Tango: A Doubles Major banner image"
+    class="image"
+  />
+  <div class="card-content">
+    <h2>Tango: A Doubles Major</h2>
+    <h4>February 01 - February 02</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>Jmook</li>
+        <li>Aklo</li>
+        <li>Krudo</li>
+        <li>Lucky</li>
+        <li>Hungrybox</li>
+        <li>Axe</li>
+        <li>Azel</li>
+        <li>Mot$</li>
+      </ul>
+    </div>
+    <hr />
+    <p>
+      <a
+        class="card-location"
+        href="https://www.google.com/maps/search/?api=1&query=N%20Hornet%20Dr%2C%20Marietta%2C%20GA%2030060%2C%20USA"
+        target="_blank"
+        data-umami-event="map-link-clicked"
+        data-umami-event-location="Marietta, GA"
+      >
+        Marietta, GA </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 9
+    </p>
+    <hr />
+    <div class="buttons">
+      <a
+        href="https://www.start.gg/tournament/tango-a-doubles-major/event/melee-doubles"
+        target="_blank"
+        class="card-button"
+        data-umami-event="start-gg-clicked"
+        data-umami-event-name="Tango: A Doubles Major"
+        >Start.gg</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="schedule-clicked"
+        data-umami-event-name="Tango: A Doubles Major"
+        >Schedule</a
+      >
+      <a
+        href="https://www.twitch.tv/Mang0"
+        target="_blank"
+        class="card-button"
+        data-umami-event="stream-clicked"
+        data-umami-event-name="Tango: A Doubles Major"
+        >Stream</a
+      >
+    </div>
+  </div>
+</div>
+
+<div
+  class="card"
   data-start-time="1739556000"
   data-end-time="1739772000"
 >
@@ -327,7 +327,7 @@
         data-umami-event-location="San Jose, CA"
       >
         San Jose, CA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 343
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 363
     </p>
     <hr />
     <div class="buttons">
