chore: add DPOTG top 8 time

--- a/site/index.html
+++ b/site/index.html
@@ -68,17 +68,17 @@
         >Start.gg</a
       >
       <a
-        href=""
+        href="https://images.start.gg/images/profileWidgetPageLayout/2675798/image-bb853830037353f8f1df47baf444cb9a-optimized.png"
         target="_blank"
-        class="card-button hidden"
+        class="card-button"
         data-umami-event="schedule-clicked"
         data-umami-event-name="Don't Park on the Grass 2024"
         >Schedule</a
       >
       <a
-        href=""
+        href="https://www.twitch.tv/btssmash"
         target="_blank"
-        class="card-button hidden"
+        class="card-button"
         data-umami-event="stream-clicked"
         data-umami-event-name="Don't Park on the Grass 2024"
         >Stream</a
@@ -327,7 +327,7 @@
         data-umami-event-location="San Jose, CA"
       >
         San Jose, CA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 363
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 368
     </p>
     <hr />
     <div class="buttons">
