feat: auto hide past tournaments

--- a/site/index.html
+++ b/site/index.html
@@ -307,14 +307,14 @@
     <div class="featured-players">
       <u>Featured Players</u>
       <ul class="featured-players-columns">
+        <li>lloD</li>
+        <li>Axe</li>
+        <li>CPU0</li>
+        <li>Squid</li>
         <li>Magi</li>
         <li>Fiction</li>
         <li>Stiv</li>
         <li>Zeo</li>
-        <li>Axe</li>
-        <li>CPU0</li>
-        <li>Squid</li>
-        <li>Umarth</li>
       </ul>
     </div>
     <hr />
@@ -327,7 +327,7 @@
         data-umami-event-location="San Jose, CA"
       >
         San Jose, CA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 368
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 398
     </p>
     <hr />
     <div class="buttons">
